<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miditest.MainActivity"
    android:background="@color/cyan">

    <Button
        android:id="@+id/buttonPlayNote"
        style="@android:style/Widget.Button"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="Repeat"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNoteGen"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="8dp"
        android:text="new tone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        tools:layout_editor_absoluteY="462dp" />

    <Button
        android:id="@+id/button1"
        style="@android:style/Widget.Button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn1"
        android:textAllCaps="false"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayNote" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Button"
        android:text="@string/btn2"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayNote"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Button"
        android:text="@string/btn3"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayNote"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="30dp" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Button"
        android:text="@string/btn4"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        android:layout_marginRight="32dp" />

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.Button"
        android:text="@string/btn5"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button6"
        style="@android:style/Widget.Button"
        android:text="@string/btn6"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/button7"
        style="@android:style/Widget.Button"
        android:text="@string/btn7"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintRight_toLeftOf="@+id/button8"
        android:layout_marginRight="32dp" />

    <Button
        android:id="@+id/button8"
        style="@android:style/Widget.Button"
        android:text="@string/btn8"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button9"
        style="@android:style/Widget.Button"
        android:text="@string/btn9"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/button10"
        style="@android:style/Widget.Button"
        android:text="@string/btn10"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintRight_toLeftOf="@+id/button11"
        android:layout_marginRight="32dp" />

    <Button
        android:id="@+id/button11"
        style="@android:style/Widget.Button"
        android:text="@string/btn11"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        style="@android:style/Widget.Button"
        android:text="@string/btn12"
        android:textAllCaps="false"
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintLeft_toRightOf="@+id/button11"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintRight_toLeftOf="@+id/textView4"
        android:layout_marginRight="2dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintRight_toLeftOf="@+id/textView3"
        android:layout_marginRight="2dp" />

</android.support.constraint.ConstraintLayout>